--- a/frontend/published.html
+++ b/frontend/published.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quiz Published</title>
-  <link rel="stylesheet" href="createQuiz1.css">
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
 </head>
-<body>
-  <header>
-    <h1>🎉 Quiz Published Successfully!</h1>
+<body class="bg-[#b3e5fc] text-[#333] m-0 p-0">
+
+  <!-- Fixed Header -->
+  <header class="fixed top-0 left-0 w-full bg-[#0288d1] text-white py-5 text-center shadow-md z-50">
+    <h1 class="text-2xl sm:text-3xl font-bold">🎉 Quiz Published Successfully!</h1>
   </header>
 
-  <div class="quiz-container">
-    <p>Your quiz has been saved and is now live in the system.</p>
-    <p>You can manage it from your dashboard or create another one.</p>
+  <!-- Main Content -->
+  <main class="pt-32 flex flex-col items-center justify-start min-h-screen px-4">
+    <div class="bg-white p-8 rounded-xl shadow-lg max-w-xl w-full text-center">
+      <p class="text-lg mb-4">Your quiz has been saved and is now live in the system.</p>
+      <p class="text-lg mb-8">You can manage it from your dashboard or create another one.</p>
 
-    <div class="button-group">
-      <a href="dashboard.html"><button>Go to Dashboard</button></a>
-      <a href="createQuiz.html"><button>Create Another Quiz</button></a>
+      <div class="flex flex-col sm:flex-row justify-center gap-4">
+        <a href="dashboard.html">
+          <button class="bg-[#0288d1] text-white font-semibold px-6 py-3 rounded-md shadow hover:bg-[#0277bd] transition">Go to Dashboard</button>
+        </a>
+        <a href="createQuiz.html">
+          <button class="bg-[#0288d1] text-white font-semibold px-6 py-3 rounded-md shadow hover:bg-[#0277bd] transition">Create Another Quiz</button>
+        </a>
+      </div>
     </div>
-  </div>
+  </main>
+
 </body>
 </html>
