--- a/frontend/takeQuiz.html
+++ b/frontend/takeQuiz.html
@@ -4,19 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Take Quiz</title>
-  <link rel="stylesheet" href="takeQuiz1.css" />
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
 </head>
-<body>
-  <header>
-    <h1 id="quiz-title">Loading quiz...</h1>
-    <p id="quiz-desc"></p>
+<body class="bg-[#b3e5fc] text-[#333] min-h-screen flex flex-col items-center px-4 pt-24">
+
+  <!-- Header -->
+  <header class="w-full max-w-4xl p-6 rounded-t-xl shadow-lg bg-[#0288d1] text-white text-center mb-4">
+    <h1 id="quiz-title" class="text-2xl sm:text-3xl font-bold">Loading quiz...</h1>
+    <p id="quiz-desc" class="text-base sm:text-lg mt-2"></p>
   </header>
 
-  <main class="quiz-container">
-    <form id="quiz-form"></form>
-    <button id="submit-btn" class="hidden">Submit Quiz</button>
-    <div id="result" class="hidden"></div>
-  </main>
+  <!-- Quiz Container -->
+  <div class="quiz-container bg-white p-8 rounded-b-xl shadow-lg max-w-4xl w-full">
+    <form id="quiz-form" class="space-y-8">
+      <!-- Questions will be dynamically inserted here -->
+    </form>
+
+    <button id="submit-btn" class="hidden mt-6 w-full bg-[#0288d1] text-white font-bold py-3 px-4 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
+      Submit Quiz
+    </button>
+
+    <div id="result" class="hidden mt-6 text-lg font-medium text-center"></div>
+  </div>
 
   <script src="takeQuiz2.js" type="module"></script>
 </body>
