insert php process

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,7 +38,8 @@
     <!-- About -->
     <section id="about">
       <h2>About Quizify</h2>
-      <p>Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through personalized quizzes and instant feedback.</p>
+      <p>Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through
+        personalized quizzes and instant feedback.</p>
     </section>
 
     <!-- Features -->
@@ -98,9 +100,15 @@
   <footer>
     <section id="contact">
       <div class="social-icons">
-        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" alt="Facebook" /></a>
-        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png" alt="Instagram" /></a>
-        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" alt="Twitter" /></a>
+        <a href="#"><img
+            src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png"
+            alt="Facebook" /></a>
+        <a href="#"><img
+            src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png"
+            alt="Instagram" /></a>
+        <a href="#"><img
+            src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png"
+            alt="Twitter" /></a>
       </div>
       <p>© 2025 Quizify. All rights reserved.</p>
     </section>
@@ -112,8 +120,9 @@
       window.location.href = "login.html";
     });
     document.getElementById("signupBtn").addEventListener("click", () => {
-      window.location.href = "signup.html";
+      window.location.href = "signup.php";
     });
   </script>
 </body>
+
 </html>
